--- a/src/App.css
+++ b/src/App.css
@@ -1,258 +1,430 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(221, 212, 255);
-}
-
-.search-input {
-    display: inline-block;
-    height: 30px;
-    width: 300px;
-    border: 1px;
-    border-radius: 10px;
-}
-
-.nav-btn {
-    background-color: #fff;
-    border-style: none;
-    text-decoration: none;
-    padding: 10px 20px;
-    margin-right: 20px;
-    border-radius: 10px;
-    font-size: 15px;
-}
-
-.nav-btn:hover {
-    background-color: rgb(122, 100, 243);
-    transition: background-color 1s;
-}
-
-.signup {
-    background-color: rgb(130, 65, 250);
-    color: #fff;
-}
-
-.signup:hover {
-    background-color: rgb(122, 100, 243);
-}
-
-.nav-link {
-    text-decoration: none;
-}
-
-.icon-text {
-    font-size: 25px;
-    text-decoration: none;
-}
-
-#courage-box {
-    height: 500px;
-    padding: 30px;
-    text-align: center;
-    background-image: url(bg.jpg);
-    background-size: cover;
-}
-
-#courage-box div {
-    margin: 200px;
-}
-
-.courage-btn {
-    background-color: #7a64f3;
-    padding: 15px 20px;
-    border-radius: 10px;
-    border: none;
-    font-size: 15px;
-    color: #fff;
-}
-
-.courage-btn:hover {
-    background-color: rgb(192, 182, 248);
-    color: black;
-}
-
-.go-back-label {
-    border-radius: 20px 50px 10px;
-    background: #BADA55;
-}
-
-#courage-text {}
-
-.solar-system {
-    width: 250px;
-    height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.orbit {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #fafbfC;
-    border-radius: 50%;
-}
-
-.earth-orbit {
-    width: 165px;
-    height: 165px;
-    -webkit-animation: spin 12s linear 0s infinite;
-}
-
-.venus-orbit {
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 7.4s linear 0s infinite;
-}
-
-.mercury-orbit {
-    width: 90px;
-    height: 90px;
-    -webkit-animation: spin 3s linear 0s infinite;
-}
-
-.planet {
-    position: absolute;
-    top: -5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #3ff9dc;
-}
-
-.sun {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #ffab91;
-}
-
-.leo {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
-
-.blue-orbit {
-    width: 165px;
-    height: 165px;
-    border: 1px solid #91daffa5;
-    -webkit-animation: spin3D 3s linear .2s infinite;
-}
-
-.green-orbit {
-    width: 120px;
-    height: 120px;
-    border: 1px solid #91ffbfa5;
-    -webkit-animation: spin3D 2s linear 0s infinite;
-}
-
-.red-orbit {
-    width: 90px;
-    height: 90px;
-    border: 1px solid #ffca91a5;
-    -webkit-animation: spin3D 1s linear 0s infinite;
-}
-
-.white-orbit {
-    width: 60px;
-    height: 60px;
-    border: 2px solid #ffffff;
-    -webkit-animation: spin3D 10s linear 0s infinite;
-}
-
-.w1 {
-    transform: rotate3D(1, 1, 1, 90deg);
-}
-
-.w2 {
-    transform: rotate3D(1, 2, .5, 90deg);
-}
-
-.w3 {
-    transform: rotate3D(.5, 1, 2, 90deg);
-}
-
-.three-quarter-spinner {
-    width: 50px;
-    height: 50px;
-    border: 3px solid #fb5b53;
-    border-top: 3px solid transparent;
-    border-radius: 50%;
-    animation: spin .5s linear 0s infinite;
-}
-
-@keyframes spin {
-    from {
-        transform: rotate(0);
+    * {
+        font-family: Arial, Helvetica, sans-serif;
     }
-    to {
-        transform: rotate(359deg);
+    
+    .navbar {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: rgb(221, 212, 255);
     }
+    
+    .search-input {
+        display: inline-block;
+        height: 30px;
+        width: 300px;
+        border: 1px;
+        border-radius: 10px;
+    }
+    
+    .nav-btn {
+        background-color: #fff;
+        border-style: none;
+        text-decoration: none;
+        padding: 10px 20px;
+        margin-right: 20px;
+        border-radius: 10px;
+        font-size: 15px;
+    }
+    
+    .nav-btn:hover {
+        background-color: rgb(122, 100, 243);
+        transition: background-color 1s;
+    }
+    
+    .signup {
+        background-color: rgb(130, 65, 250);
+        color: #fff;
+    }
+    
+    .signup:hover {
+        background-color: rgb(122, 100, 243);
+    }
+    
+    .signup-form {
+        padding: 10px 0;
+    }
+    
+    .sign-up-wrapper {
+        margin: 200px 650px;
+    }
+    
+    .username-input {
+        margin-bottom: 20px;
+        display: block;
+        width: 200px;
+        height: 30px;
+    }
+    
+    .signup-text {
+        margin-top: 30px;
+    }
+    
+    .signup-btn {
+        margin-left: 55px;
+    }
+    
+    .nav-link {
+        text-decoration: none;
+    }
+    
+    .user-btn {
+        background-color: rgb(221, 212, 255);
+        border: none;
+        padding: 10px 20px;
+        margin-right: 20px;
+        color: rgb(0, 0, 0);
+    }
+    
+    .icon-text {
+        font-size: 25px;
+        text-decoration: none;
+    }
+    
+    .comment-card {
+        padding: 20px 0;
+        margin-left: 250px;
+    }
+    
+    .comment-form {
+        margin-left: 250px;
+        margin-top: 20px;
+    }
+    
+    .content-cmt {
+        font-weight: 500;
+    }
+    
+    .username-icon {
+        padding-right: 20px;
+    }
+    
+    .user-icon {
+        padding-right: 20px;
+    }
+    
+    #courage-box {
+        height: 600px;
+        padding: 30px;
+        text-align: center;
+        background-image: url(bg.jpg);
+        background-size: cover;
+    }
+    
+    #courage-box div {
+        margin: 200px;
+    }
+    
+    .courage-btn {
+        background-color: #7a64f3;
+        padding: 15px 20px;
+        border-radius: 10px;
+        border: none;
+        font-size: 15px;
+        color: #fff;
+    }
+    
+    .courage-btn:hover {
+        background-color: rgb(192, 182, 248);
+        color: black;
+    }
+    
+    .go-back-label {
+        margin: 250px;
+        position: relative;
+        top: 20px;
+        border-bottom: 1px solid black;
+    }
+    
+    #courage-text {
+        margin-right: -60px;
+    }
+    
+    .home-page-cmt-box {
+        background-color: rgb(122, 100, 243);
+        height: 250px;
+    }
+    
+    .home-page-cmt-text {
+        display: inline-block;
+        position: relative;
+        top: 110px;
+        left: 480px;
+    }
+    
+    .home-page-cmt-text label {
+        color: #fff;
+        text-decoration: none;
+        font-size: 30px;
+    }
+    
+    .home-page-cmt-text label:hover {
+        color: rgb(59, 59, 59);
+    }
+    
+    .new-post-form-container {
+        background-color: #f8f8f8;
+        padding: 100px 250px;
+    }
+    
+    .feeling-submit-btn {
+        background-color: rgb(130, 65, 250);
+        color: #fff;
+    }
+    
+    .feeling-submit-btn:active,
+    .feeling-submit-btn:hover {
+        background-color: rgb(192, 182, 248);
+        color: black;
+    }
+    
+    .new-post-headline {
+        margin-top: -50px;
+    }
+    
+    .feeling-form {
+        padding-top: 50px;
+    }
+    
+    .feeling-input {
+        margin-left: 60px;
+    }
+    
+    .content-label {
+        margin-left: 120px;
+    }
+    
+    .content-input {
+        margin-left: 60px;
+    }
+    
+    .feeling-submit-btn {
+        margin-left: 60px;
+    }
+    
+    .post-card-div {
+        padding: 20px 0px;
+        border-bottom: 1px solid #969696e0;
+        margin: 0 250px;
+    }
+    
+    .post-title {
+        text-decoration: none;
+        color: #474747;
+        font-weight: 100;
+        font-size: 20px;
+    }
+    
+    .like-btn {
+        background-color: #fff;
+        border: none;
+        margin-top: 5px;
+    }
+    
+    .like-cmt-wrapper {
+        margin-top: 50px;
+    }
+    
+    .cmt-btn {
+        background-color: rgb(130, 65, 250);
+        color: #fff;
+        border-style: none;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 10px;
+        font-size: 15px;
+        margin-top: 20px;
+    }
+    
+    .login-div {
+        margin-top: 100px;
+        position: relative;
+        left: 180px;
+    }
+    
+    .password-label {
+        margin-left: 30px;
+    }
+    
+    .login-2-btn {
+        margin-left: 30px;
+    }
+    
+    .solar-system {
+        width: 250px;
+        height: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .orbit {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #fafbfC;
+        border-radius: 50%;
+    }
+    
+    .earth-orbit {
+        width: 165px;
+        height: 165px;
+        -webkit-animation: spin 12s linear 0s infinite;
+    }
+    
+    .venus-orbit {
+        width: 120px;
+        height: 120px;
+        -webkit-animation: spin 7.4s linear 0s infinite;
+    }
+    
+    .mercury-orbit {
+        width: 90px;
+        height: 90px;
+        -webkit-animation: spin 3s linear 0s infinite;
+    }
+    
+    .planet {
+        position: absolute;
+        top: -5px;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #3ff9dc;
+    }
+    
+    .sun {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        background-color: #ffab91;
+    }
+    
+    .leo {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+    
+    .blue-orbit {
+        width: 165px;
+        height: 165px;
+        border: 1px solid #91daffa5;
+        -webkit-animation: spin3D 3s linear .2s infinite;
+    }
+    
+    .green-orbit {
+        width: 120px;
+        height: 120px;
+        border: 1px solid #91ffbfa5;
+        -webkit-animation: spin3D 2s linear 0s infinite;
+    }
+    
+    .red-orbit {
+        width: 90px;
+        height: 90px;
+        border: 1px solid #ffca91a5;
+        -webkit-animation: spin3D 1s linear 0s infinite;
+    }
+    
+    .white-orbit {
+        width: 60px;
+        height: 60px;
+        border: 2px solid #ffffff;
+        -webkit-animation: spin3D 10s linear 0s infinite;
+    }
+    
+    .w1 {
+        transform: rotate3D(1, 1, 1, 90deg);
+    }
+    
+    .w2 {
+        transform: rotate3D(1, 2, .5, 90deg);
+    }
+    
+    .w3 {
+        transform: rotate3D(.5, 1, 2, 90deg);
+    }
+    
+    .three-quarter-spinner {
+        width: 50px;
+        height: 50px;
+        border: 3px solid #fb5b53;
+        border-top: 3px solid transparent;
+        border-radius: 50%;
+        animation: spin .5s linear 0s infinite;
+    }
+    
+    @keyframes spin {
+        from {
+            transform: rotate(0);
+        }
+        to {
+            transform: rotate(359deg);
+        }
+    }
+    
+    @keyframes spin3D {
+        from {
+            transform: rotate3d(.5, .5, .5, 360deg);
+        }
+        to {
+            transform: rotate3d(0deg);
+        }
+    }
+    
+    @keyframes configure-clockwise {
+        0% {
+            transform: rotate(0);
+        }
+        25% {
+            transform: rotate(90deg);
+        }
+        50% {
+            transform: rotate(180deg);
+        }
+        75% {
+            transform: rotate(270deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    
+    @keyframes configure-xclockwise {
+        0% {
+            transform: rotate(45deg);
+        }
+        25% {
+            transform: rotate(-45deg);
+        }
+        50% {
+            transform: rotate(-135deg);
+        }
+        75% {
+            transform: rotate(-225deg);
+        }
+        100% {
+            transform: rotate(-315deg);
+        }
+    }
+    
+    @keyframes pulse {
+        from {
+            opacity: 1;
+            transform: scale(1);
+        }
+        to {
+            opacity: .25;
+            transform: scale(.75);
+        }
+    }
+    /* transform: scale(.75);
+
 }
 
-@keyframes spin3D {
-    from {
-        transform: rotate3d(.5, .5, .5, 360deg);
-    }
-    to {
-        transform: rotate3d(0deg);
-    }
-}
-
-@keyframes configure-clockwise {
-    0% {
-        transform: rotate(0);
-    }
-    25% {
-        transform: rotate(90deg);
-    }
-    50% {
-        transform: rotate(180deg);
-    }
-    75% {
-        transform: rotate(270deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes configure-xclockwise {
-    0% {
-        transform: rotate(45deg);
-    }
-    25% {
-        transform: rotate(-45deg);
-    }
-    50% {
-        transform: rotate(-135deg);
-    }
-    75% {
-        transform: rotate(-225deg);
-    }
-    100% {
-        transform: rotate(-315deg);
-    }
-}
-
-@keyframes pulse {
-    from {
-        opacity: 1;
-        transform: scale(1);
-    }
-    to {
-        opacity: .25;
-        transform: scale(.75);
-    }
-}
+} */
